##
## autogenerated ChangeLog -- don't edit
##

2006-07-16 Sunday 22:03  Rocky Bernstein <rocky@panix.com>

	* Makefile.am: Makefile.am: Add dbg-command.inc

2006-07-16 Sunday 21:24  Rocky Bernstein <rocky@panix.com>

	* test/: Makefile.am, settrace.cmd, settrace.right, settrace.sh,
	  settrace.tests: Add test of set_trace

2006-07-16 Sunday 14:04  Rocky Bernstein <rocky@panix.com>

	* dbg-fns.inc, dbg-info.inc, dbg-init.inc, dbg-sig.inc,
	  test/brkpt2.cmd, test/brkpt2.right, test/brkpt3.right,
	  test/run-brkpt, test/sig.right: More detail in "info program".
	  Reinstate brkpt3 test since bash bug seems to have been fixed.

2006-07-13 Thursday 10:54  Rocky Bernstein <rocky@panix.com>

	* dbg-brk.inc, dbg-cmds.inc, test/tbreak.cmd, test/tbreak.right:
	  Don't try to step/next/continue if the program's not running.

2006-07-13 Thursday 09:51  Rocky Bernstein <rocky@panix.com>

	* NEWS, dbg-info.inc, test/tbreak.cmd, test/tbreak.right: Don't try
	  to give line number when program is not running.

2006-07-13 Thursday 09:42  Rocky Bernstein <rocky@panix.com>

	* bashdb-trace.in, dbg-info.inc, dbg-init.inc, dbg-sig.inc,
	  dbg-stack.inc, test/misc-output.right, test/misc.right,
	  test/tbreak.cmd, test/tbreak.right: Note state of debugging
	  program. Add info program.  Don't try to show stack when we are
	  not running the program.

2006-07-04 Tuesday 06:01  Rocky Bernstein <rocky@panix.com>

	* NEWS: More fexible and more general output by no longer assuming
	  we write to sys.stdout. Rather the output object is saved in the
	  instance variable, which could be and often is the same as
	  sys.stdout, but doesn't need to be. This change may make
	  communication used in remote debugging and thread debugging
	  simpler. Many thanks to Matt Flemming for the patch.

2006-07-04 Tuesday 02:56  Rocky Bernstein <rocky@panix.com>

	* dbg-complete.inc: Add "commands" to completion list.

2006-06-18 Sunday 13:48  Rocky Bernstein <rocky@panix.com>
