@@ -2,6 +2,18 @@
 ## autogenerated ChangeLog -- don't edit
 ##
 
+2006-07-17 Monday 09:45  Rocky Bernstein <rocky@panix.com>
+
+	* bashdb-trace.in, test/hanoi.sh.in, test/settrace.cmd,
+	  test/settrace.right, test/settrace.sh: Get settrace working when
+	  called other than the first time.
+
+2006-07-17 Monday 02:02  Rocky Bernstein <rocky@panix.com>
+
+	* test/: settrace.right, settrace.sh, settrace.tests, trace.right,
+	  trace2.right, trace2.tests: Fixes to get building out of source
+	  tree (make distcheck) working better.
+
 2006-07-16 Sunday 22:03  Rocky Bernstein <rocky@panix.com>
 
 	* Makefile.am: Makefile.am: Add dbg-command.inc
